--- a/02_レシピ/01_カウンター/index.html
+++ b/02_レシピ/01_カウンター/index.html
@@ -2,3 +2,26 @@
   1. "!"と入力して、tabキーを押し、HTMLの雛形を作成する。
   2. script要素でmain.jsを読み込む。
 -->
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <h2>カウンター</h2>
+      <h2 id="display">0</h2>
+    </div>
+    <button id="button_plus_one">+1</button>
+    <button id="button_minus_one">-1</button>
+    <button id="button_multiply_two">*2</button>
+    <div>
+      <h2 id="refresh">0に初期化</h2>
+    </div>
+    <script src="main.js"></script>
+  </body>
+</html>
+
+
